--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Card game created with React" />
   <meta property="og:title" content="Karma - Strategic Card Game" data-rh="true">
   <meta property="og:description" content="Card game created with React" data-rh="true">
-  <meta property="og:image" content="https://i.ibb.co/zPZXwBt/website-preview.png" data-rh="true">
+  <meta property="og:image" content="https://i.ibb.co/NmTLSrw/karma.png" data-rh="true">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
